--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     </span>
                 </button>
                 <button onclick="generateSVG()">Generate SVG</button>
-                <button onclick="generateRandomGradient()">🎲 Random Gradient</button>
+                <button onclick="generateRandomGradient()" style="background: linear-gradient( 90deg, rgba(255, 0, 204, 0.5), rgba(51, 51, 255, 0.5), rgba(0, 255, 238, 0.5), rgba(255, 204, 0, 0.49), rgba(255, 0, 204, 0.5) ); "> 🎲 Random Gradient</button>
                 <!--<button onclick="toggleRandomMenu()">Randomizer Settings</button>-->
 
                 <!--<button onclick="createimage()">Create Image</button>-->
 
-                <details id="randomizerSettingsPanel" class="animated-border-box" open>
+                <details id="randomizerSettingsPanel" class="animated-border-box">
                     <summary class="random-summary">🎲 Randomizer Settings</summary>
                     <div class="randomizer-settings">
                         <hr />
@@ -85,11 +85,6 @@
                             <input type="number" id="randStopMax" value="5" min="2" max="10">
                         </label>
 
-                        <label style="margin-left:10px;">
-                            Blur Range:
-                            <input type="number" id="randBlurMin" value="0" step="0.5"> –
-                            <input type="number" id="randBlurMax" value="6" step="0.5">
-                        </label>
                         <hr />
                         <label>
                             Allowed Gradient Types:
@@ -97,7 +92,19 @@
                             <label><input type="checkbox" class="randType" value="radial" checked> Radial</label>
                             <label><input type="checkbox" class="randType" value="conic" checked> Conic</label>
                         </label>
+
+                        <label style="margin-left:20px;">
+                            Duration Range:
+                            <input type="number" id="randDurMin" value="2" min="0.01" max="10000"> –
+                            <input type="number" id="randDurMax" value="5" min="0.01" max="20000">
+                        </label>
+
                         <hr />
+                        <label>
+                            Animation Chance (%):
+                            <input type="number" id="randAnimChance" value="60" min="0" max="100">
+                        </label>
+
                         <label>
                             Include Animations:
                             <label><input type="checkbox" class="randAnim" value="rotate" checked> Rotate</label>
@@ -108,19 +115,19 @@
                             <label><input type="checkbox" class="randAnim" value="saturation" checked> Saturation</label>
                         </label>
                         <hr />
-                        <label>
-                            Animation Chance (%):
-                            <input type="number" id="randAnimChance" value="60" min="0" max="100">
-                        </label>
-
 
                         <label>
                             Opacity Range:
                             <input type="number" id="randOpacityMin" value="0.2" step="0.1" min="0" max="1"> –
                             <input type="number" id="randOpacityMax" value="1" step="0.1" min="0" max="1">
                         </label>
+                        <label style="margin-left:10px;">
+                            Blur Range:
+                            <input type="number" id="randBlurMin" value="0" step="0.5"> –
+                            <input type="number" id="randBlurMax" value="6" step="0.5">
+                        </label>
                         <hr />
-                        <button onclick="generateRandomGradientFromSettings()" style="margin-left:0.5rem;margin-bottom:0.5rem;">🎲 Generate with Settings</button>
+                        <button onclick="generateRandomGradientFromSettings()" style="margin-left: 0.5rem; margin-bottom: 0.5rem; background: linear-gradient( 90deg, rgba(255, 0, 204, 0.4), rgba(51, 51, 255, 0.4), rgba(0, 255, 238, 0.4), rgba(255, 204, 0, 0.4), rgba(255, 0, 204, 0.4) );">🎲 Generate with Settings</button>
                     </div>
                 </details>
 
@@ -132,7 +139,8 @@
             </div>
             <div class="textarea-wrapper">
                 <textarea id="configInput" placeholder="Paste Config and click the Import button to load an exported config"></textarea>
-                <button class="copy-btn" onclick="importConfig()">Import</button>
+                <button type="button" class="copy-btn" onclick="importConfig()">Import</button>
+                <button type="button" class="copy-btn" onclick="pasteToElement('configInput')" style="right:100px;">Paste</button>
 
             </div>
         </div>
